# TradingAgents-CN

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.backend  docker-compose.yml  justfile  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: main.py
app/core/: database.py  unified_config.py
app/routers/: analysis.py  config.py  daily_recommendation.py  market.py  multi_source_sync.py  paper.py  reports.py  stock_sync.py  stocks.py  sync.py  system_config.py  websocket_notifications.py  websocket_quotes.py
app/services/: basics_sync_service.py  config_service.py  daily_recommendation_service.py  database_screening_service.py  favorites_service.py  financial_data_service.py  index_data_service.py  market_overview_prewarm_service.py  multi_source_basics_sync_service.py  paper_performance_service.py  paper_snapshot_service.py  pnl_stream_service.py  portfolio_risk_service.py  quote_freshness_monitor.py  quote_snapshot_reader.py  quotes_ingestion_service.py  quotes_service.py  realtime_quote_sync_service.py  scheduler_service.py  simple_analysis_service.py  stock_data_service.py  stock_indicator_service.py  trading_calendar_service.py
app/worker/: akshare_sync_service.py  baostock_sync_service.py  tushare_sync_service.py
cli/: __init__.py  akshare_init.py  baostock_init.py  main.py  models.py  tushare_init.py  utils.py
config/: README.md  daily_recommendation.json  mongod.conf  redis.conf
config/daily_recommendations/: 888087d5.json  b11ca37b.json
docs/: CHANGELOG.md  LLM_ADAPTER_TEMPLATE.py  USAGE.md  code-review-2026-05-05.md  data-audit-2026-05-17.md
docs/ai-context/: architecture.md  coding-standards.md  known-issues.md  project-structure.md
frontend/: index.html  vite.config.ts
frontend/src/: main.ts
scripts/: data_audit.js  dev.sh  local-services.sh  setup-native.sh
tests/: akshare_check_fixed.py  akshare_isolated_test.py  analyze_akshare_data.py  check_key_metrics.py  conftest.py  debug_akshare_daily_basic.py  debug_baostock_fields.py  debug_baostock_stock_list.py  debug_deepseek_cost.py  debug_deepseek_cost_issue.py  debug_full_flow.py  debug_imports.py  debug_test_execution.py  debug_tool_binding_issue.py  debug_web_issue.py  demo_fallback_system.py  final_gemini_test.py  fundamentals_analyst_clean.py  pytest.ini  quick_akshare_check.py  quick_redis_test.py  quick_test.py  quick_test_hk.py  simple_akshare_test.py  simple_env_test.py  test_000002_valuation.py  test_002027_specific.py  test_300750_final.py  test_agent_utils_tushare_fix.py  test_akshare_alternative.py  test_akshare_amount.py  test_akshare_api.py  test_akshare_code_format.py  test_akshare_debug.py  test_akshare_direct.py  test_akshare_fixed.py  test_akshare_functionality.py  test_akshare_hk.py  test_akshare_hk_apis.py  test_akshare_performance.py  (+248 more)
tests/_legacy/: README.md  akshare_isolated_test.py  analyze_akshare_data.py  check_key_metrics.py  debug_baostock_stock_list.py  debug_full_flow.py  fundamentals_analyst_clean.py  quick_akshare_check.py  quick_test.py  simple_akshare_test.py  simple_env_test.py  test_000002_valuation.py  test_002027_specific.py  test_akshare_fixed.py  test_all_analysts_hk_fix.py  test_analyst_loop_fix.py  test_chinese_output.py  test_cli_logging_fix.py  test_complete_tool_workflow.py  test_dashscope_openai_fix.py  test_dashscope_tool_call_fix.py  test_data_sources_simple.py  test_db_requirements_fix.py  test_deepseek_cost_debug.py  test_deepseek_cost_fix.py  test_deepseek_react_fix.py  test_duplicate_progress_fix.py  test_fundamentals_react_hk_fix.py  test_gemini_final.py  test_hk_apis_simple.py  test_hk_data_source_fix.py  test_hk_fundamentals_fix.py  test_hk_simple.py  test_level3_deadlock_debug.py  test_level3_fix.py  test_llm_technical_analysis_debug.py  test_logging_fix.py  test_news_analyst_fix.py  test_optimized_prompts.py  test_pb_calculation_fix.py  (+10 more)
tests/config/: test_deprecations.py  test_logging_config.py  test_logging_json.py  test_settings.py
tests/dataflows/: test_data_source_manager_async_bridge.py  test_realtime_metrics.py
tests/integration/: test_dashscope_integration.py  test_realtime_publish_subscribe_roundtrip.py
tests/middleware/: test_trace_id.py
tests/services/: test_akshare_sync_financial_signature.py  test_daily_recommendation_config.py  test_daily_recommendation_service.py  test_financial_data_validation_gate.py  test_market_overview_prewarm_service.py  test_paper_snapshot_service.py  test_pnl_stream_service.py  test_quote_freshness_monitor.py  test_quote_snapshot_reader.py  test_quotes_backfill.py  test_quotes_ingestion_and_enrichment.py  test_quotes_service_timeout.py  test_realtime_quote_publish.py  test_scheduler_quotes_job.py  test_screening_roe_field.py  test_stock_indicator_service.py
tests/system/: test_config_summary.py  test_llm_provider_sanitization.py
tests/test_tushare_unified/: test_tushare_provider.py  test_tushare_sync_service.py
tests/tradingagents/: test_app_cache_toggle.py
tests/unit/: test_stocks_kline_news_api.py
tradingagents/: __init__.py  default_config.py
tradingagents/agents/: __init__.py
tradingagents/api/: stock_api.py
tradingagents/config/: __init__.py  config_manager.py  database_config.py  database_manager.py  (+6 more)
utils/: check_version_consistency.py  cleanup_unnecessary_dirs.py  data_config.py  update_data_source_references.py
(+313 files in other folders)
