[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 后端API框架和服务器
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",

    # 数据库和缓存
    "motor>=3.3.0",
    "pymongo>=4.0.0",
    "redis>=6.2.0",

    # 认证和安全
    "PyJWT>=2.0.0",
    "bcrypt>=4.0.0",

    # 任务调度和异步
    "apscheduler>=3.10.0",
    "aiofiles>=0.8.0",

    # HTTP客户端和SSE
    "httpx>=0.24.0",
    "sse-starlette>=1.0.0",

    # 日志处理
    "concurrent-log-handler>=0.9.24",  # Windows 友好的日志轮转处理器

    # 数据源和金融数据
    "akshare>=1.17.86",
    "baostock>=0.8.8",
    "eodhd>=1.0.32",
    "finnhub-python>=2.4.23",
    "tushare>=1.4.21",
    "yfinance>=0.2.63",
    "stockstats>=0.6.5",

    # AI和LLM
    "chromadb>=1.0.12",
    "dashscope>=1.20.0",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.0",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",  # 修复 client_options 未定义错误
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "openai>=1.0.0,<2.0.0",

    # 数据处理和分析
    "pandas>=2.3.0",
    "plotly>=5.0.0",

    # 网络爬虫和解析
    "curl-cffi>=0.6.0",  # 模拟真实浏览器TLS指纹，绕过反爬虫检测
    "feedparser>=6.0.11",
    "parsel>=1.10.0",
    "praw>=7.8.1",
    "requests>=2.32.4",

    # 文档和格式化
    "markdown>=3.4.0",
    "pypandoc>=1.11",
    "python-docx>=0.8.11",  # Word文档处理，用于修复文本方向
    "pdfkit>=1.0.0",  # PDF生成工具，需要wkhtmltopdf

    # 工具和辅助
    "psutil>=6.1.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
qianfan = ["qianfan>=0.4.20"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.0",
]

[project.scripts]
tradingagents = "main:main"

[tool.setuptools.packages.find]
include = ["tradingagents*"]
exclude = ["tests*", "docs*", "scripts*", "data*", "logs*", "reports*", "results*", "eval_results*", "upstream_contribution*"]

# ==================================================================================
# 以下 [tool.*] 段由 init-ci skill (Recipe B) 生成，TradingAgents-CN fork 已定制：
# - target-version 跟随 requires-python 最低值 py310（不是模板默认 py312）
# - pyright include 改 ["tradingagents", "tests"]（模板默认 ["src", "tests"]）
# - 排除 app/ frontend/ web/ scripts/ examples/（专有授权 / 非 Python / 已废弃 / 上游一次性脚本）
# ==================================================================================

[tool.ruff]
line-length = 140
target-version = "py310"
exclude = ["app", "frontend", "scripts", ".venv", "tests/_legacy", "scripts/_legacy"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade, RUF: ruff-specific
# 中文项目放行：全角字符在变量/字符串/docstring/注释中是常态，非代码质量问题
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["tradingagents", "tests"]
exclude = ["app", "frontend", "scripts", ".venv", "**/node_modules", "tests/_legacy", "scripts/_legacy"]
typeCheckingMode = "standard"
# silence fork 项目固有噪音（OpenSpec change `pyright-handfix-pass-1`）：
# 中文 + 数据处理 fork 大量用 pandas DataFrame / 第三方库返回值（无 stub），
# 以下 7 类报警治理成本极高且无价值（详见 openspec/specs/lint-policy/spec.md）
reportAttributeAccessIssue = "none"     # pandas DataFrame .column_name 动态属性
reportFunctionMemberAccess = "none"     # 类似 attribute access
reportReturnType = "none"               # 返回值类型推断（第三方库返回 unknown）
reportMissingModuleSource = "none"      # 装了包但缺 stub（如 dashscope）
reportUnsupportedDunderAll = "none"     # __all__ 类型推断
reportOperatorIssue = "none"            # 操作符与 unknown 类型
reportAssignmentType = "none"           # 赋值时类型推断
# pass-2 (上游 dead code path + 真问题但批量治理代价高，OpenSpec change `pyright-handfix-pass-2`)
reportMissingImports = "none"           # 上游 dead code 引用已删模块（fork 不触达）
reportOptionalMemberAccess = "none"     # Optional 没 None check（fork 现有大量 case）
reportArgumentType = "none"             # 第三方库返回 Any 与签名不匹配
reportPossiblyUnboundVariable = "none"  # 变量可能未定义
reportUnboundVariable = "none"          # 变量未定义
reportCallIssue = "none"                # 调用签名错误
reportIncompatibleMethodOverride = "none"
reportOptionalOperand = "none"
reportOptionalCall = "none"             # Optional 当 callable 用
reportOptionalSubscript = "none"        # Optional 当 subscriptable 用
reportOptionalIterable = "none"         # Optional 当 iterable 用
reportGeneralTypeIssues = "none"
reportSelfClsParameterName = "none"     # self/cls 参数命名
reportInvalidTypeForm = "none"          # 类型表达式无效（多在 deprecated 代码）
reportUnusedExpression = "none"         # 未使用表达式
reportRedeclaration = "none"            # 重复声明

[tool.pytest.ini_options]
testpaths = ["tests"]
# 上游 tests/ 含一些非测试脚本（debug_*.py / fast_tdx_test.py 等），collect 时忽略
addopts = "-ra --strict-markers"
norecursedirs = ["config", "_legacy"]
# OpenSpec change `pytest-marker-strict` 沉淀的 marker 体系
markers = [
    "unit: 纯 Python 逻辑，无外部依赖（pre-commit hook 跑这一类）",
    "integration: 需 docker / mongo / redis（CI 跑，本地按需）",
    "requires_env: 需 .env LLM key / 数据源 token",
    "requires_network: 需公网",
]
